archive, basic prediction web app, es processing

--- a/archive/debug.ipynb
+++ b/archive/debug.ipynb
@@ -2,21 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas"
+    "import scrapy\n",
+    "import pymongo\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "227"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# !git clone https://github.com/junyitt/fch-virus-combat\n",
-    "# !conda install -c conda-forge scrapy"
+    "client = pymongo.MongoClient()\n",
+    "db = client[\"news\"]\n",
+    "# coll = db[\"sebenarnya_v1\"]\n",
+    "coll = db[\"sebenarnya_v2_test1\"]\n",
+    "len(list(coll.find()))"
    ]
   }
  ],
@@ -36,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
