--- a/Spider/debug.ipynb
+++ b/Spider/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,134 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>n</th>\n",
-       "      <th>coll</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>70</td>\n",
-       "      <td>malaysiakini_v1_test1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>363</td>\n",
-       "      <td>hmetro_v1_covid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>67</td>\n",
-       "      <td>thestar_v1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>300</td>\n",
-       "      <td>thestar_pro</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>254</td>\n",
-       "      <td>sebenarnya_pro</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>358</td>\n",
-       "      <td>hmetro_raw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>300</td>\n",
-       "      <td>thestar_v1_covid</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>228</td>\n",
-       "      <td>sebenarnya_v2_proccessed2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>228</td>\n",
-       "      <td>sebenarnya_v2_proccessed1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>332</td>\n",
-       "      <td>hmetro_pro</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>249</td>\n",
-       "      <td>Standardize1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>259</td>\n",
-       "      <td>sebenarnya_raw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1080</td>\n",
-       "      <td>thestar_raw</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>254</td>\n",
-       "      <td>sebenarnya_v2_test1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>107</td>\n",
-       "      <td>sebenarnya_v1_test2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       n                       coll\n",
-       "0     70      malaysiakini_v1_test1\n",
-       "1    363            hmetro_v1_covid\n",
-       "2     67                 thestar_v1\n",
-       "3    300                thestar_pro\n",
-       "4    254             sebenarnya_pro\n",
-       "5    358                 hmetro_raw\n",
-       "6    300           thestar_v1_covid\n",
-       "7    228  sebenarnya_v2_proccessed2\n",
-       "8    228  sebenarnya_v2_proccessed1\n",
-       "9    332                 hmetro_pro\n",
-       "10   249               Standardize1\n",
-       "11   259             sebenarnya_raw\n",
-       "12  1080                thestar_raw\n",
-       "13   254        sebenarnya_v2_test1\n",
-       "14   107        sebenarnya_v1_test2"
+       "0.0"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,13 +47,98 @@
     "# RAW_COLLECTION = Settings.THESTAR_RAW_MONGO_COLLECTION\n",
     "# RAW_COLLECTION = Settings.SEBENARNYA_RAW_MONGO_COLLECTION\n",
     "PRO_COLLECTION = \"sebenarnya_pro\"\n",
-    "# PRO_COLLECTION = \"hmetro_pro\"\n",
+    "PRO_COLLECTION = \"hmetro_pro\"\n",
     "# PRO_COLLECTION = \"thestar_pro\"\n",
     "client = pymongo.MongoClient(MONGO_URI)\n",
     "db = client[MONGO_DB]\n",
     "raw_coll = db[RAW_COLLECTION]\n",
     "pro_coll = db[PRO_COLLECTION]\n",
-    "quick_list_collection()"
+    "# quick_list_collection()\n",
+    "\n",
+    "def check_duplicates(raw_coll):\n",
+    "    urls = [j.get(\"url\") for j in raw_coll.find()]\n",
+    "    sd = [j.get(\"scrape_date\") for j in raw_coll.find()]\n",
+    "    df = pd.DataFrame(dict(url = urls, sd = sd))\n",
+    "    z = df[\"url\"].value_counts()\n",
+    "\n",
+    "    df = df.set_index(\"url\")\n",
+    "    df[\"z\"] = z\n",
+    "    return (df.z >= 2).mean()\n",
+    "\n",
+    "## remove duplicates in mongoshell\n",
+    "'''\n",
+    "use news\n",
+    "db.thestar_raw.find({}, {url:1}).sort({_id:1}).forEach(function(doc){\n",
+    "    db.thestar_raw.remove({_id:{$gt:doc._id}, url:doc.url});\n",
+    "})\n",
+    "'''\n",
+    "###\n",
+    "check_duplicates(raw_coll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = \"https://www.thestar.com.my/news/nation/2020/04/10/dear-yb-enough-with-the-photo-ops-walk-the-mco-talk\"\n",
+    "# u = \"https://www.thestar.com.my/news/nation/2020/04/11/covid-19-large-scale-community-screening-tests-conducted-in-hulu-langat\"\n",
+    "d = raw_coll.find_one({\"url\": u})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2020, 4, 11, 10, 5, 0, 838000)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = raw_coll.find_one( sort=[( '_id', -1 )]) \n",
+    "d.get(\"scrape_date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'get_text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-99-b10aec8e8b6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mProcessing_TheStar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpro\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# d\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/fch-virus-combat/Spider/processing_thestar.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, db_dict)\u001b[0m\n\u001b[1;32m     66\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m         \u001b[0;31m# create processed dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_processed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# self.pro\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/fch-virus-combat/Spider/processing_thestar.py\u001b[0m in \u001b[0;36mrun_processed\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m         \u001b[0;31m# 2. news_date\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m         \u001b[0mdd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"p\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"date\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m         \u001b[0mtt_soup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"time\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"timestamp\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtt_soup\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get_text'"
+     ]
+    }
+   ],
+   "source": [
+    "Processing_TheStar(d).pro\n",
+    "# d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(d.get(\"content_html\"))"
    ]
   },
   {
@@ -182,11 +149,70 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ElasticSearch"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from elasticsearch import Elasticsearch\n",
+    "es = Elasticsearch()\n",
+    "u = \"https://www.thestar.com.my/news/nation/2020/03/23/covid-19-current-situation-in-malaysia-updated-daily\"\n",
+    "search_param = {\n",
+    "    \"query\": {\n",
+    "        \"match\": {\n",
+    "            \"url\": u\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "response = es.search(index=\"my_index\", body=search_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'took': 24,\n",
+       " 'timed_out': False,\n",
+       " 'total': 1,\n",
+       " 'deleted': 1,\n",
+       " 'batches': 1,\n",
+       " 'version_conflicts': 0,\n",
+       " 'noops': 0,\n",
+       " 'retries': {'bulk': 0, 'search': 0},\n",
+       " 'throttled_millis': 0,\n",
+       " 'requests_per_second': -1.0,\n",
+       " 'throttled_until_millis': 0,\n",
+       " 'failures': []}"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "es.delete_by_query(index='all_news', body={\"query\": {\"match_all\": {}}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# response"
+   ]
   },
   {
    "cell_type": "code",
@@ -214,22 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ddf_fna"
+    "raw_coll.find_one({\"url\": 0})"
    ]
   },
   {
@@ -540,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
